[package]
name = "netstack-smoltcp"
version = "0.1.2"
edition = "2021"
authors = ["cavivie <cavivie@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/automesh-network/netstack-smoltcp"
homepage = "https://github.com/automesh-network/netstack-smoltcp"
documentation = "https://docs.rs/netstack-smoltcp"
keywords = ["netstack", "smoltcp", "network", "ip", "tun"]
categories = ["network-programing"]
description = """
A netstack for the special purpose of turning packets from/to a TUN interface
into TCP streams and UDP packets. It uses smoltcp-rs as the backend netstack.
"""

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-util = "0.7.10"
etherparse = "0.13"
futures = "0.3"
rand = "0.8"
spin = "0.9"
smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
] }
net-route = { git = "https://github.com/VendettaReborn/net-route.git", rev = "cead9c20b68c2a13410daab6a0a1f64cf5e8779e"}
libc = "0.2.153"
socket2 = "0.5.6"
bytes = "1.6.0"
ipnet = "2.9.0"
watfaq-tun = { path = "../watfaq-tun"}

# ipconfig = {version = "0.3.2", path = "../ipconfig"}

[dev-dependencies]
tun = { git = "https://github.com/VendettaReborn/rust-tun.git" ,rev = "48b98ca4be012e8edfe45321e609bc2666fb79a8", package = "tun2", features = ["async"] }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "io-util",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"
structopt = "0.3"
socket2 = "0.5.6"
socket2-ext = { version = "0.1" }
netstack-lwip = { git = "https://github.com/Watfaq/netstack-lwip.git", rev = "2817bf82740e04bbee6b7bf1165f55657a6ed163" }
#watfaq-tun = { git = "https://github.com/VendettaReborn/watfaq-tun.git", rev = "7852ed5687c15aa2408feed00dcb532594eb0a5c"}
watfaq-tun = { path = "../watfaq-tun"}

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-sock-diag = "0.4.2"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.6"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ioctl = { version = "0.8", package = "ioctl-sys" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = {version = "0.52",features = ["Win32_Foundation","Win32_NetworkManagement_IpHelper","Win32_NetworkManagement_Ndis","Win32_Networking_WinSock","Win32_System_IO"]}
winapi = { version = "0.3"}

[target.'cfg(target_os = "linux")'.dev-dependencies]
netlink-packet-sock-diag = "0.4.2"
